--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.0.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18",
